<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/auth_wallpaper"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/a_messenger2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/a_messenger"
        android:textColor="?attr/colorAccent"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardview2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_edittext">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15"
                />

            <TextView
                android:id="@+id/header2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="Регистрация"
                android:textColor="@color/purple_500"
                android:fontFamily="casual"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                android:padding="2dp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/topGuideLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="Логин"
                android:textStyle="italic"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topGuideLine"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="Отображаемое имя"
                android:textStyle="italic"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="Пароль"
                android:textStyle="italic"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password_repeat"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="Повтор пароля"
                android:textStyle="italic"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registerButton"
                android:text="Зарегистрироваться"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_repeat"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                android:textStyle="bold|italic"
                app:cornerRadius = "20dp"/>

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff0000"
                android:gravity="center"
                android:padding="5dp"
                android:fontFamily="casual"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                android:textStyle="bold|italic"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerButton"
                tools:text="Ошибка: Неверный логин или пароль"
                android:layout_marginTop="5dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/login_question"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview2"
        android:layout_marginTop="20dp"
        android:textColorHighlight="@color/black"
        />


</androidx.constraintlayout.widget.ConstraintLayout>